git fix: gap da sidebar

--- a/Components/Sidebar/Sidebar.css
+++ b/Components/Sidebar/Sidebar.css
@@ -28,7 +28,6 @@
 .sidebar nav ul {
   display: flex;
   flex-direction: column;
-  gap: 16px;
   padding: 0;
   margin-left: 5%;
   margin-right: 5%;
